# plom

./: .codespell-ignorelines  .codespell-ignorewords  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  00_new_project.py  011_scanningStartHere.py  011_startHere.py  013_readQRCodes.py  014_sendPagesToServer.py  019_checkScansStatus.py  AppImageBuilder.Containerfile  AppImageBuilder.README.md  AppImageBuilder.yml  CHANGELOG.md  CHANGELOG.md.dev  CONTRIBUTORS  Containerfile  Containerfile.bulk  Containerfile.django  Containerfile.legacy  Dockerfile  MANIFEST.in  README.md  ca.plom.PlomClient.appdata.xml  ca.plom.PlomClient.desktop  client.linux.spec  client.macos-universal2.spec  client.macos-x86_64.spec  client.macos.spec  client.windows.spec  compose.yaml  demo.py  demo_rubrics.toml  docker-compose.yml  docker_run.sh  (+23 more)
clients/: annotator.py  autoIDer.py  autoMarker.py  autoReverter.py  client.py  client.spec  client.spec.mac  client_utils.py  commentList.json  examviewwindow.py  gui_utils.py  identifier.py  identifier_client.py  identifier_client.spec  key_help.py  manager.py  managerMessenger.py  managerRevertAll.py  mark_handler.py  marker.py  marker_client.py  marker_client.spec  messenger.py  mlp_annotator.py  mlp_client.py  mlp_client.spec  mlp_identifier.py  mlp_markentry.py  mlp_marker.py  mlp_messenger.py  mlp_useful.py  pagescene.py  pageview.py  painter.py  plom_exceptions.py  randoIDer.py  randoMarker.py  reorientationwindow.py  reviewview.py  test_view.py  (+6 more)
contrib/: 11_write_to_canvas_spreadsheet.py  README.txt  build_demo_classlists.py  build_extra_page_with_qrcodes.py  build_extra_page_with_qrcodes_src.tex  build_plom_latex_template.py  bulk_forgive.py  canvas-show-assignments.py  canvas-show-courses.py  email-plom-credentials.py  hunt_f_strings_with_no_f.py  is_copyright_uptodate.py  old_12_archive.py  old_script_to_run_plom_in_docker.sh  onlinedist-README.txt  onlinedist_01_clean_canvas.py  onlinedist_01_make_random_codes.py  onlinedist_02_make_random_codes.py  onlinedist_02_rename_papers.py  onlinedist_02_writing_times_and_rooms.py  onlinedist_03_make_random_codes.py  onlinedist_041_merge_filenames_to_classlist.py  onlinedist_042_write_urls.py  onlinedist_043_times_backup_submit.py  onlinedist_05_rename_papers.py  onlinedist_05b_rename_papers_spares.py  papers_to_rooms.csv  papers_to_rooms.py  plom-make-DNM-sheets.py  plom-make-custom-version-map-even-odd.py  plom-make-custom-version-map.py  plom-make-scrap-sheets.py  plom-preid.py  plom-push-solns-to-canvas.py  plom-push-to-canvas-old.py  plom-push-to-canvas-uncached.py  plom-push-to-canvas.py  plom-return_codes_to_canvas_csv.py  plom-return_urls_to_csv.py  plom-separate-qr-coded.py  (+5 more)
django/: .gitignore  Dockerfile  README.md  client_path_hack.sh  db.sqlite3  demo.py  demo.sh  demo_before_spec.sh  demo_how_to_run.md  demo_path_hack.sh  demo_test.sh  docker-compose.yml  docker_run.sh  generate_report.sh  how_to_run_server.md  manage.py  requirements.txt
doc/: Makefile  README.md  make.bat  requirements.txt
docs/: coursesUsingPlom.md  dev_guide.md  faq.md  identifying_papers.md  linux_installation.md  macos_installation.md  marking_papers.md  plomAPIurls.md  returning_papers.md  starting_the_client.md  wsl_installation.md
finishing/: 021_startHere.py  022_check_completed.py  023_spreadsheet.py  024_reassemble.py  024a_reassemble_completed.py  024b_reassemble_ID_only.py  029_clearManagerLogin.py  07_check_completed.py  07alt_check_ID_total.py  08_build_cover_pages.py  09_reassemble.py  09alt_reassembled_ided_but_unmarked.py  10_prepare_coded_return.py  11_prepare_coded_return.py  11_write_to_canvas_spreadsheet.py  12_archive.py  12_beta_canvas_spreadsheet.py  coverPageBuilder.py  finishMessenger.py  image_server.py  readme.md  return_tools.py  run_unit_tests.sh  testReassembler.py  testReassembler_only_ided.py  utils.py  view_test_template.html
idReader/: idBox2.eps  idTemplate.tex  idTemplate_2.tex  locateID.py  predictStudentID.py  readStudentID.py  readme.md  trainModelTF.py  trainModelTensorFlow.py  ui_id_locator.py
imageServer/: aliceBob.py  authenticate.py  before_you_run_server.py  buildCannedUsers.py  davconf.conf  davconf.confc  examviewwindow.py  id_storage.py  identify_manager.py  identify_reverter.py  image_server.py  latex2png.py  mark_manager.py  mark_reverter.py  mark_storage.py  moreScansAdded.py  readme.md  serverSetup.py  testspecification.py  total_reverter.py  total_storage.py  ui_server_setup.py  userManager.py
maint/: bumps.sh  find-MR-target-branch.py  is-copyright-uptodate.py  maint-wipe-rebuild-migrations.sh  maint-wipe-rebuild.sh  plomLogoPng.sh
newServer/: authenticate.py  examDB.py  latex2png.py  newServer.py  pageNotSubmitted.py  serverSetup.py  ui_server_setup.py  userManager.py
nginx/: Dockerfile  default.conf
notesAndDocs/: README.md  scan-readme.md
plom/: __init__.py  aliceBob.py  annotation_situations.py  baseMessenger.py  client.linux.spec  client.osx.spec  client.windows.spec  comment_utils.py  common.py  default_keys.toml  demo.py  demoClassList.csv  demoUserList.csv  demo_rubrics.toml  esdf_french_keys.toml  feedback_rules.py  finishMessenger.py  ijkl_keys.toml  latexTemplate.tex  latexTemplatev2.tex  logit.py  manage_user_files.py  managerMessenger.py  messenger.py  misc_utils.py  misc_version.py  plom_admin_messenger.py  plom_exceptions.py  question_labels.py  rubric_utils.py  rules.py  scanMessenger.py  serverDetails.toml  specParser.py  specVerifier.py  spec_verifier.py  tagging.py  templateSolutionSpec.toml  templateTestSpec.toml  templateUserList.csv  (+24 more)
plom_ml/: __init__.py  exceptions.py
plom_server/: .gitignore  README.md  __init__.py  asgi.py  context_processors.py  demo_path_hack.sh  docker_run.sh  get_js.py  log_config_dev.yaml  log_config_prod.yaml  manage.py  middleware.py  plom_logging.py  pytest.ini  settings.py  test_version.py  urls.py  wsgi.py
qtCreatorFiles/: ui_annotator.ui  ui_annotator_lefthandmouse.ui  ui_annotator_lhm.ui  ui_annotator_rhm.ui  ui_annotator_righthandmouse.ui  (+11 more)
(+2150 files in other folders)
