# SPDX-License-Identifier: FSFAP
# Copyright (C) 2020-2023 Colin B. Macdonald
# Copyright (C) 2022 Edith Coates
# Copyright (C) 2023 Julian Lapenna
# Copyright (C) 2023 Divy Patel

[build-system]
requires = ["setuptools", "wheel"]

# You can run `black plom` or `black plom --verbose`
[tool.black]
line-length = 88
target-version = ['py37']

[tool.pylint.main]
extension-pkg-allow-list = ["PyQt6", "cv2", "zxingcpp"]
generated-members = ["pandas", "cv2.*"]
# order matters: need errors-only before disable
errors-only = true
# TODO: lots of these in plom/db
disable = ["not-an-iterable"]
output-format = "colorized"
# we have some in-tree deprecated or to-move code that needs tensorflow
ignored-modules = ["tensorflow", "api_secrets"]

[tool.coverage.report]
# our CI runs /usr/local stuff for some reason
# python*.py errors need -i or config match here
omit = ["*/test_*", "/usr/*", "*/config*", "django/*"]

[tool.pytest.ini_options]
# TODO: for now ignore the django folder
addopts = "--ignore plom/django"
qt_api = "pyqt6"

[tool.djlint]
# TODO: fix then remove from ignore list: H006, H013
# TODO: think about: H020, H025, H030, H031
ignore="H006,H013,H020,H021,H023,H025,H030,H031"
# indent=2

[tool.pydocstyle]
convention = "google"
# TODO: many of these should be fixed instead of ignored!
add-ignore = "D100,D101,D102,D103,D104,D107"
